# comp0034_coursework-01

./: README.md  Readme.md  app.py  logic.py  pyproject.toml  requirements  submission.yml
backend/: database.py  main.py  models.py  schemas.py
pages/: dashboard.py  data_management.py  market_explorer.py  scenario_simulator.py
tests/: conftest.py  test_api.py  test_logic.py  test_ui.py
